<resources>
    <string name="app_name">Menu</string>
    <string name="action_settings">Settings</string>
    <string name="red_string">RED</string>
    <string name="green_string">GREEN</string>
    <string name="yellow_string">YELLOW</string>
    <string name="show_popup">SHOW POPUP</string>
    <string name="message1">Long press me!!!!</string>
    <string name="dragtext">This is a drag text</string>

    <string name="intro">Please these foods in your order of preference.</string>
    <string name="option_1">Apple</string>
    <string name="option_2">Cake</string>
    <string name="option_3">Cheese</string>
    <string name="choice_1">Most favorite</string>
    <string name="choice_2">-</string>
    <string name="choice_3">Least favorite</string>

    <string name="dragdrop2">Drag drop 2</string>

</resources>
