<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/intro"/>

    <TextView
        android:id="@+id/option1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/option"
        android:gravity="center"
        android:text="@string/option_1"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/option2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/option"
        android:gravity="center"
        android:text="@string/option_2"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/option3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/option"
        android:gravity="center"
        android:text="@string/option_3"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/choice1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/choise"
        android:gravity="center"
        android:text="@string/choice_1"/>
    <TextView
        android:id="@+id/choice2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/choise"
        android:gravity="center"
        android:text="@string/choice_2"/>
    <TextView
        android:id="@+id/choice3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/choise"
        android:gravity="center"
        android:text="@string/choice_3"/>

</LinearLayout>